[package]
name = "blink"
version = "0.1.0"
authors = ["shimo8810 <shimo.8810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-std-stub = "1.0.2"
avrd = "0.3.0"
avr_delay = { git = "https://github.com/avr-rust/delay" }